account-data/Reishi-Narisada/ap-northeast-1/ec2-describe-security-groups.json
{
    "SecurityGroups": [
        {
            "Description": "load-balancer-wizard-1 created on 2019-06-19T16:51:52.385+09:00",
            "GroupId": "sg-0008c13c5d6e72e2e",
            "GroupName": "noin-web-production",
            "IpPermissions": [
                {
                    "FromPort": 80,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "118.158.213.95/32"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 80,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 443,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "118.158.213.95/32"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 443,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "416817624313",
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "alb-noin-web-production"
                }
            ],
            "VpcId": "vpc-b0eae7d4"
        },
        {
            "Description": "2019-06-21T11:02:01.707Z",
            "GroupId": "sg-00966ba86a6d23282",
            "GroupName": "noin-web-ecs",
            "IpPermissions": [
                {
                    "FromPort": 80,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 80,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 3000,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0",
                            "Description": ""
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 3002,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 22,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "150.249.206.42/32"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 22,
                    "UserIdGroupPairs": [
                        {
                            "Description": "from linux-bastion",
                            "GroupId": "sg-093d5f6db5f7c3fbf",
                            "UserId": "416817624313"
                        }
                    ]
                },
                {
                    "FromPort": 32768,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 60999,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 443,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 443,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "416817624313",
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "ecs-noin-web-production"
                }
            ],
            "VpcId": "vpc-b0eae7d4"
        },
        {
            "Description": "noin web elasticache",
            "GroupId": "sg-012ff8d307b79db27",
            "GroupName": "noin-web-elasticache",
            "IpPermissions": [
                {
                    "FromPort": 11211,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "150.249.206.42/32"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 11211,
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-0008c13c5d6e72e2e",
                            "UserId": "416817624313"
                        },
                        {
                            "GroupId": "sg-00966ba86a6d23282",
                            "UserId": "416817624313"
                        },
                        {
                            "GroupId": "sg-093d5f6db5f7c3fbf",
                            "UserId": "416817624313"
                        },
                        {
                            "GroupId": "sg-0f1a7376",
                            "UserId": "416817624313"
                        }
                    ]
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "416817624313",
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "noin-web-elasticache"
                }
            ],
            "VpcId": "vpc-b0eae7d4"
        },
        {
            "Description": "noin staging documentdb security",
            "GroupId": "sg-014b07944815efc50",
            "GroupName": "documentdb-noin-staging",
            "IpPermissions": [
                {
                    "FromPort": 27017,
                    "IpProtocol": "tcp",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 27017,
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-0623b52b0a95cb4db",
                            "UserId": "416817624313"
                        },
                        {
                            "GroupId": "sg-b9b7f2df",
                            "UserId": "416817624313"
                        }
                    ]
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "416817624313",
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "documentdb-noin-staging"
                }
            ],
            "VpcId": "vpc-4ec1e72a"
        },
        {
            "Description": "Slave group for Elastic MapReduce created on 2018-10-29T18:54:04.477Z",
            "GroupId": "sg-015d81bcd20123557",
            "GroupName": "ElasticMapReduce-slave",
            "IpPermissions": [
                {
                    "FromPort": 0,
                    "IpProtocol": "tcp",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 65535,
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-015d81bcd20123557",
                            "UserId": "416817624313"
                        },
                        {
                            "GroupId": "sg-04e7a3b6c25a17dd9",
                            "UserId": "416817624313"
                        }
                    ]
                },
                {
                    "FromPort": 0,
                    "IpProtocol": "udp",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 65535,
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-015d81bcd20123557",
                            "UserId": "416817624313"
                        },
                        {
                            "GroupId": "sg-04e7a3b6c25a17dd9",
                            "UserId": "416817624313"
                        }
                    ]
                },
                {
                    "FromPort": -1,
                    "IpProtocol": "icmp",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": -1,
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-015d81bcd20123557",
                            "UserId": "416817624313"
                        },
                        {
                            "GroupId": "sg-04e7a3b6c25a17dd9",
                            "UserId": "416817624313"
                        }
                    ]
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "416817624313",
            "VpcId": "vpc-4ec1e72a"
        },
        {
            "Description": "elasticsearch-noin-test",
            "GroupId": "sg-0189c639d9358a30c",
            "GroupName": "elasticsearch-noin-test",
            "IpPermissions": [
                {
                    "FromPort": 22,
                    "IpProtocol": "tcp",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 22,
                    "UserIdGroupPairs": [
                        {
                            "Description": "from linux-bastion",
                            "GroupId": "sg-093d5f6db5f7c3fbf",
                            "UserId": "416817624313"
                        }
                    ]
                },
                {
                    "FromPort": 9300,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "172.32.0.0/16",
                            "Description": "for transport"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 9300,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 9200,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "172.32.0.0/16"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 9200,
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-0f1a7376",
                            "UserId": "416817624313"
                        },
                        {
                            "GroupId": "sg-33b89055",
                            "UserId": "416817624313"
                        }
                    ]
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "416817624313",
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "noin-es5-production"
                }
            ],
            "VpcId": "vpc-b0eae7d4"
        },
        {
            "Description": "noin-app-005-20191024 created 2019-10-24T17:12:25.413+09:00",
            "GroupId": "sg-01d97fdec80ade572",
            "GroupName": "noin-app-production-updatetest",
            "IpPermissions": [
                {
                    "FromPort": 80,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0",
                            "Description": ""
                        }
                    ],
                    "Ipv6Ranges": [
                        {
                            "CidrIpv6": "::/0",
                            "Description": ""
                        }
                    ],
                    "PrefixListIds": [],
                    "ToPort": 80,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 22,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [
                        {
                            "CidrIpv6": "::/0"
                        }
                    ],
                    "PrefixListIds": [],
                    "ToPort": 22,
                    "UserIdGroupPairs": [
                        {
                            "Description": "from linux-bastion1",
                            "GroupId": "sg-05197623a0901c21f",
                            "UserId": "416817624313"
                        },
                        {
                            "Description": "from linux-bastion1",
                            "GroupId": "sg-093d5f6db5f7c3fbf",
                            "UserId": "416817624313"
                        }
                    ]
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "416817624313",
            "VpcId": "vpc-b0eae7d4"
        },
        {
            "Description": "Created from the RDS Management Console: 2019/06/04 07:38:45",
            "GroupId": "sg-0307da9f12907eb35",
            "GroupName": "rds-launch-wizard",
            "IpPermissions": [
                {
                    "FromPort": 3306,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "172.32.0.0/20"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 3306,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "416817624313",
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "rds-noin-corp"
                }
            ],
            "VpcId": "vpc-b0eae7d4"
        },
        {
            "Description": "default VPC security group",
            "GroupId": "sg-03243e7ea183af1f1",
            "GroupName": "default",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-03243e7ea183af1f1",
                            "UserId": "416817624313"
                        }
                    ]
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "416817624313",
            "VpcId": "vpc-0372cb49d9c3bdc5d"
        },
        {
            "Description": "noin-corp-test-lb",
            "GroupId": "sg-0336688675a24adc2",
            "GroupName": "noin-corp-test-lb",
            "IpPermissions": [
                {
                    "FromPort": 80,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [
                        {
                            "CidrIpv6": "::/0"
                        }
                    ],
                    "PrefixListIds": [],
                    "ToPort": 80,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 443,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [
                        {
                            "CidrIpv6": "::/0"
                        }
                    ],
                    "PrefixListIds": [],
                    "ToPort": 443,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "416817624313",
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "noin-corp-test-lb"
                }
            ],
            "VpcId": "vpc-b0eae7d4"
        },
        {
            "Description": "noin-corp-production",
            "GroupId": "sg-03b842a877d97b426",
            "GroupName": "noin-corp-production",
            "IpPermissions": [
                {
                    "FromPort": 80,
                    "IpProtocol": "tcp",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 80,
                    "UserIdGroupPairs": [
                        {
                            "Description": "noin-corp-prod-elb",
                            "GroupId": "sg-0c97a777512204d5c",
                            "UserId": "416817624313"
                        }
                    ]
                },
                {
                    "FromPort": 22,
                    "IpProtocol": "tcp",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 22,
                    "UserIdGroupPairs": [
                        {
                            "Description": "from noin-deploy-production",
                            "GroupId": "sg-05197623a0901c21f",
                            "UserId": "416817624313"
                        },
                        {
                            "Description": "from linux-bastion",
                            "GroupId": "sg-093d5f6db5f7c3fbf",
                            "UserId": "416817624313"
                        }
                    ]
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "416817624313",
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "noin-corp-prod-ec2"
                }
            ],
            "VpcId": "vpc-b0eae7d4"
        },
        {
            "Description": "This security group was generated by AWS Marketplace and is based on recommended settings for Amazon Linux AMI (HVM / 64-bit) version 2018.03.0.20190611 provided by Amazon Web Services",
            "GroupId": "sg-03d4d777fab52525f",
            "GroupName": "noin-dmp-batch",
            "IpPermissions": [
                {
                    "FromPort": 22,
                    "IpProtocol": "tcp",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 22,
                    "UserIdGroupPairs": [
                        {
                            "Description": "from noin-deploy",
                            "GroupId": "sg-05197623a0901c21f",
                            "UserId": "416817624313"
                        },
                        {
                            "Description": "from bastion",
                            "GroupId": "sg-093d5f6db5f7c3fbf",
                            "UserId": "416817624313"
                        }
                    ]
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "416817624313",
            "VpcId": "vpc-b0eae7d4"
        },
        {
            "Description": "launch-wizard-2 created 2019-05-30T17:55:58.415+09:00",
            "GroupId": "sg-03d5541642d6f25a1",
            "GroupName": "launch-wizard-2",
            "IpPermissions": [
                {
                    "FromPort": 22,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 22,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 5601,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 5601,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "416817624313",
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "noin-kibana-production"
                }
            ],
            "VpcId": "vpc-b0eae7d4"
        },
        {
            "Description": "noin production documentdb security",
            "GroupId": "sg-03fd8460f1bbe317a",
            "GroupName": "documentdb-noin-production",
            "IpPermissions": [
                {
                    "FromPort": 27017,
                    "IpProtocol": "tcp",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 27017,
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-093d5f6db5f7c3fbf",
                            "UserId": "416817624313"
                        },
                        {
                            "GroupId": "sg-0f1a7376",
                            "UserId": "416817624313"
                        },
                        {
                            "GroupId": "sg-33b89055",
                            "UserId": "416817624313"
                        },
                        {
                            "GroupId": "sg-980488e1",
                            "UserId": "416817624313"
                        }
                    ]
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "416817624313",
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "documentdb-noin-production"
                }
            ],
            "VpcId": "vpc-b0eae7d4"
        },
        {
            "Description": "Master group for Elastic MapReduce created on 2018-10-29T18:54:04.477Z",
            "GroupId": "sg-04e7a3b6c25a17dd9",
            "GroupName": "ElasticMapReduce-master",
            "IpPermissions": [
                {
                    "FromPort": 0,
                    "IpProtocol": "tcp",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 65535,
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-015d81bcd20123557",
                            "UserId": "416817624313"
                        },
                        {
                            "GroupId": "sg-04e7a3b6c25a17dd9",
                            "UserId": "416817624313"
                        }
                    ]
                },
                {
                    "FromPort": 22,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [
                        {
                            "CidrIpv6": "::/0"
                        }
                    ],
                    "PrefixListIds": [],
                    "ToPort": 22,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 8443,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "27.0.3.152/29"
                        },
                        {
                            "CidrIp": "103.246.151.128/26"
                        },
                        {
                            "CidrIp": "27.0.3.144/29"
                        },
                        {
                            "CidrIp": "27.0.1.152/29"
                        },
                        {
                            "CidrIp": "27.0.1.24/29"
                        },
                        {
                            "CidrIp": "54.240.200.0/24"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 8443,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 0,
                    "IpProtocol": "udp",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 65535,
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-015d81bcd20123557",
                            "UserId": "416817624313"
                        },
                        {
                            "GroupId": "sg-04e7a3b6c25a17dd9",
                            "UserId": "416817624313"
                        }
                    ]
                },
                {
                    "FromPort": -1,
                    "IpProtocol": "icmp",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": -1,
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-015d81bcd20123557",
                            "UserId": "416817624313"
                        },
                        {
                            "GroupId": "sg-04e7a3b6c25a17dd9",
                            "UserId": "416817624313"
                        }
                    ]
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "416817624313",
            "VpcId": "vpc-4ec1e72a"
        },
        {
            "Description": "launch-wizard-3 created 2019-09-19T18:20:17.510+09:00",
            "GroupId": "sg-05197623a0901c21f",
            "GroupName": "noin-deploy-ec2",
            "IpPermissions": [
                {
                    "FromPort": 22,
                    "IpProtocol": "tcp",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 22,
                    "UserIdGroupPairs": [
                        {
                            "Description": "from linux-bastion",
                            "GroupId": "sg-093d5f6db5f7c3fbf",
                            "UserId": "416817624313"
                        }
                    ]
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "416817624313",
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "noin-deploy-production-ec2"
                }
            ],
            "VpcId": "vpc-b0eae7d4"
        },
        {
            "Description": "noin-app-009",
            "GroupId": "sg-05329a724d034a5ab",
            "GroupName": "noin-app-009",
            "IpPermissions": [
                {
                    "FromPort": 80,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [
                        {
                            "CidrIpv6": "::/0"
                        }
                    ],
                    "PrefixListIds": [],
                    "ToPort": 80,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 22,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [
                        {
                            "CidrIpv6": "::/0"
                        }
                    ],
                    "PrefixListIds": [],
                    "ToPort": 22,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "416817624313",
            "VpcId": "vpc-b0eae7d4"
        },
        {
            "Description": "launch-wizard-1 created 2019-05-12T15:48:19.203+09:00",
            "GroupId": "sg-053dfab4dd40004fd",
            "GroupName": "launch-wizard-1",
            "IpPermissions": [
                {
                    "FromPort": 22,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 22,
                    "UserIdGroupPairs": [
                        {
                            "Description": "from linux-bastion-sta...",
                            "GroupId": "sg-0623b52b0a95cb4db",
                            "UserId": "416817624313"
                        }
                    ]
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "416817624313",
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "noin-deploy-staging-ec2"
                }
            ],
            "VpcId": "vpc-4ec1e72a"
        },
        {
            "Description": "noin-web-staging-elasticache memcached",
            "GroupId": "sg-05f5bd0dc4de72ead",
            "GroupName": "noin-web-staging-elasticache",
            "IpPermissions": [
                {
                    "FromPort": 0,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 65535,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "416817624313",
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "noin-web-staging-elasticache"
                }
            ],
            "VpcId": "vpc-4ec1e72a"
        },
        {
            "Description": "Enables SSH Access to Bastion Hosts",
            "GroupId": "sg-0623b52b0a95cb4db",
            "GroupName": "Linux-bastion02-BastionSecurityGroup-O4PF3WI0Q3G",
            "IpPermissions": [
                {
                    "FromPort": 22,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 22,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": -1,
                    "IpProtocol": "icmp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": -1,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "416817624313",
            "Tags": [
                {
                    "Key": "aws:cloudformation:stack-id",
                    "Value": "arn:aws:cloudformation:ap-northeast-1:416817624313:stack/Linux-bastion02/2502e990-d601-11e9-a3fc-0e36924addac"
                },
                {
                    "Key": "aws:cloudformation:stack-name",
                    "Value": "Linux-bastion02"
                },
                {
                    "Key": "Name",
                    "Value": "linux-bastion-staging"
                },
                {
                    "Key": "aws:cloudformation:logical-id",
                    "Value": "BastionSecurityGroup"
                }
            ],
            "VpcId": "vpc-4ec1e72a"
        },
        {
            "Description": "elasticsearch-head",
            "GroupId": "sg-0672b241bab01f9bc",
            "GroupName": "elasticsearch-head",
            "IpPermissions": [
                {
                    "FromPort": 9100,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "150.249.193.163/32"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 9100,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "416817624313",
            "VpcId": "vpc-4ec1e72a"
        },
        {
            "Description": "noin-es7-staging",
            "GroupId": "sg-067ece16e942d7ed3",
            "GroupName": "noin-es7-staging",
            "IpPermissions": [
                {
                    "FromPort": 22,
                    "IpProtocol": "tcp",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 22,
                    "UserIdGroupPairs": [
                        {
                            "Description": "from linux-bastion-staging",
                            "GroupId": "sg-0623b52b0a95cb4db",
                            "UserId": "416817624313"
                        }
                    ]
                },
                {
                    "FromPort": 9200,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0",
                            "Description": "elasticsearch"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 9200,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "416817624313",
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "noin-es7-staging"
                }
            ],
            "VpcId": "vpc-4ec1e72a"
        },
        {
            "Description": "noin production redash server security",
            "GroupId": "sg-07d9f261",
            "GroupName": "redash-noin-production",
            "IpPermissions": [
                {
                    "FromPort": 80,
                    "IpProtocol": "tcp",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 80,
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-66684300",
                            "UserId": "416817624313"
                        }
                    ]
                },
                {
                    "FromPort": 22,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "150.249.206.42/32"
                        },
                        {
                            "CidrIp": "118.158.245.61/32",
                            "Description": "ihara home"
                        },
                        {
                            "CidrIp": "106.72.165.97/32",
                            "Description": "kato home"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 22,
                    "UserIdGroupPairs": [
                        {
                            "Description": "from noin-deploy-production",
                            "GroupId": "sg-05197623a0901c21f",
                            "UserId": "416817624313"
                        },
                        {
                            "Description": "from linux-bastion",
                            "GroupId": "sg-093d5f6db5f7c3fbf",
                            "UserId": "416817624313"
                        }
                    ]
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "416817624313",
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "redash-noin-production"
                }
            ],
            "VpcId": "vpc-b0eae7d4"
        },
        {
            "Description": "noin-corp-test",
            "GroupId": "sg-080456cb30b849b9e",
            "GroupName": "noin-corp-test",
            "IpPermissions": [
                {
                    "FromPort": 80,
                    "IpProtocol": "tcp",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 80,
                    "UserIdGroupPairs": [
                        {
                            "Description": "noin-corp-test-elb",
                            "GroupId": "sg-0336688675a24adc2",
                            "UserId": "416817624313"
                        }
                    ]
                },
                {
                    "FromPort": 22,
                    "IpProtocol": "tcp",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 22,
                    "UserIdGroupPairs": [
                        {
                            "Description": "from noin-deploy-production",
                            "GroupId": "sg-05197623a0901c21f",
                            "UserId": "416817624313"
                        },
                        {
                            "Description": "from linux-bastion1/2",
                            "GroupId": "sg-093d5f6db5f7c3fbf",
                            "UserId": "416817624313"
                        }
                    ]
                },
                {
                    "FromPort": 3306,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "127.0.0.1/32",
                            "Description": "localhost"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 3306,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "416817624313",
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "noin-corp-test-ec2"
                }
            ],
            "VpcId": "vpc-b0eae7d4"
        },
        {
            "Description": "This security group was generated by AWS Marketplace and is based on recommended settings for Amazon Linux AMI (HVM / 64-bit) version 2018.03.0.20190611 provided by Amazon Web Services",
            "GroupId": "sg-08c08cbc2e8e697d7",
            "GroupName": "noin-staging-dmp-batch",
            "IpPermissions": [
                {
                    "FromPort": 22,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "3.113.118.126/32",
                            "Description": "from linux-bastion-staging"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 22,
                    "UserIdGroupPairs": [
                        {
                            "Description": "from linux-bastion-staging",
                            "GroupId": "sg-0623b52b0a95cb4db",
                            "UserId": "416817624313"
                        }
                    ]
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "416817624313",
            "VpcId": "vpc-4ec1e72a"
        },
        {
            "Description": "Enables SSH Access to Bastion Hosts",
            "GroupId": "sg-093d5f6db5f7c3fbf",
            "GroupName": "Linux-bastion-noin-BastionSecurityGroup-1MAET6LU5ZPTN",
            "IpPermissions": [
                {
                    "FromPort": 22,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 22,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "416817624313",
            "Tags": [
                {
                    "Key": "aws:cloudformation:stack-id",
                    "Value": "arn:aws:cloudformation:ap-northeast-1:416817624313:stack/Linux-bastion-noin/25b0d4e0-ae85-11e9-a869-0a1d3b063294"
                },
                {
                    "Key": "aws:cloudformation:stack-name",
                    "Value": "Linux-bastion-noin"
                },
                {
                    "Key": "aws:cloudformation:logical-id",
                    "Value": "BastionSecurityGroup"
                },
                {
                    "Key": "Name",
                    "Value": "linux-bastion1_2"
                }
            ],
            "VpcId": "vpc-b0eae7d4"
        },
        {
            "Description": "redash",
            "GroupId": "sg-094f1e6f",
            "GroupName": "redash",
            "IpPermissions": [
                {
                    "FromPort": 80,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 80,
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-946b3af2",
                            "UserId": "416817624313"
                        }
                    ]
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "416817624313",
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "redash-app"
                }
            ],
            "VpcId": "vpc-4ec1e72a"
        },
        {
            "Description": "2019-06-17T06:44:50.203Z",
            "GroupId": "sg-0a30f983ceb99d677",
            "GroupName": "web-6668",
            "IpPermissions": [
                {
                    "FromPort": 80,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 80,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "416817624313",
            "VpcId": "vpc-4ec1e72a"
        },
        {
            "Description": "noin-es5-production",
            "GroupId": "sg-0b198e1c04e47ff4a",
            "GroupName": "noin-es5-production",
            "IpPermissions": [
                {
                    "FromPort": 22,
                    "IpProtocol": "tcp",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 22,
                    "UserIdGroupPairs": [
                        {
                            "Description": "from noin-deploy-production",
                            "GroupId": "sg-05197623a0901c21f",
                            "UserId": "416817624313"
                        },
                        {
                            "Description": "from linux-bastion",
                            "GroupId": "sg-093d5f6db5f7c3fbf",
                            "UserId": "416817624313"
                        },
                        {
                            "Description": "from noin-batch",
                            "GroupId": "sg-0f1a7376",
                            "UserId": "416817624313"
                        }
                    ]
                },
                {
                    "FromPort": 9300,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "172.32.0.0/16",
                            "Description": "for transport"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 9300,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 9200,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "172.32.0.0/16"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 9200,
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-0f1a7376",
                            "UserId": "416817624313"
                        },
                        {
                            "GroupId": "sg-33b89055",
                            "UserId": "416817624313"
                        }
                    ]
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "416817624313",
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "noin-es5-production"
                }
            ],
            "VpcId": "vpc-b0eae7d4"
        },
        {
            "Description": "launch-wizard-1 created 2018-10-17T12:34:20.046+09:00",
            "GroupId": "sg-0b33480cd30f16a19",
            "GroupName": "noin-staging-ssh",
            "IpPermissions": [
                {
                    "FromPort": 22,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "150.249.193.163/32"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 22,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "416817624313",
            "VpcId": "vpc-4ec1e72a"
        },
        {
            "Description": "2019-06-19T05:12:04.981Z",
            "GroupId": "sg-0bac80d954041e356",
            "GroupName": "ecs-noin-web",
            "IpPermissions": [
                {
                    "FromPort": 80,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 80,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 3000,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 3002,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 22,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "150.249.206.42/32"
                        },
                        {
                            "CidrIp": "118.158.245.61/32",
                            "Description": "jitaku"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 22,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 32768,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 60999,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 443,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 443,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "416817624313",
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "ecs-noin-web-staging"
                }
            ],
            "VpcId": "vpc-4ec1e72a"
        },
        {
            "Description": "load-balancer-wizard-1 created on 2019-06-10T00:37:17.605+09:00",
            "GroupId": "sg-0c93c1d7016998888",
            "GroupName": "noin-deploy-lb",
            "IpPermissions": [
                {
                    "FromPort": 443,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [
                        {
                            "CidrIpv6": "::/0"
                        }
                    ],
                    "PrefixListIds": [],
                    "ToPort": 443,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "416817624313",
            "VpcId": "vpc-4ec1e72a"
        },
        {
            "Description": "noin-corp-prod-elb",
            "GroupId": "sg-0c97a777512204d5c",
            "GroupName": "noin-corp-prod-elb",
            "IpPermissions": [
                {
                    "FromPort": 80,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [
                        {
                            "CidrIpv6": "::/0"
                        }
                    ],
                    "PrefixListIds": [],
                    "ToPort": 80,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 443,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [
                        {
                            "CidrIpv6": "::/0"
                        }
                    ],
                    "PrefixListIds": [],
                    "ToPort": 443,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "416817624313",
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "noin-corp-prod-elb"
                }
            ],
            "VpcId": "vpc-b0eae7d4"
        },
        {
            "Description": "launch-wizard-3 created 2019-07-30T16:40:59.378+09:00",
            "GroupId": "sg-0d29f255a84c11036",
            "GroupName": "noin-production-bastion-test",
            "IpPermissions": [
                {
                    "FromPort": 80,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0",
                            "Description": ""
                        }
                    ],
                    "Ipv6Ranges": [
                        {
                            "CidrIpv6": "::/0",
                            "Description": ""
                        }
                    ],
                    "PrefixListIds": [],
                    "ToPort": 80,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 22,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0",
                            "Description": ""
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 22,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 443,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0",
                            "Description": ""
                        }
                    ],
                    "Ipv6Ranges": [
                        {
                            "CidrIpv6": "::/0",
                            "Description": ""
                        }
                    ],
                    "PrefixListIds": [],
                    "ToPort": 443,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "416817624313",
            "VpcId": "vpc-b0eae7d4"
        },
        {
            "Description": "noin production batch server",
            "GroupId": "sg-0f1a7376",
            "GroupName": "batch-noin-production",
            "IpPermissions": [
                {
                    "FromPort": 22,
                    "IpProtocol": "tcp",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 22,
                    "UserIdGroupPairs": [
                        {
                            "Description": "from deploy-production",
                            "GroupId": "sg-05197623a0901c21f",
                            "UserId": "416817624313"
                        },
                        {
                            "Description": "from linux-bastion",
                            "GroupId": "sg-093d5f6db5f7c3fbf",
                            "UserId": "416817624313"
                        }
                    ]
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "416817624313",
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "batch-noin-production"
                }
            ],
            "VpcId": "vpc-b0eae7d4"
        },
        {
            "Description": "2019-06-17T08:13:26.501Z",
            "GroupId": "sg-0f3607826c0df05c9",
            "GroupName": "ecs-fa-8025",
            "IpPermissions": [
                {
                    "FromPort": 80,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 80,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "416817624313",
            "VpcId": "vpc-4ec1e72a"
        },
        {
            "Description": "Enables SSH Access to Bastion Hosts",
            "GroupId": "sg-0f3a9161f44a12d86",
            "GroupName": "Linux-bastion-noin-staging-BastionSecurityGroup-1OWVIP9HABLP2",
            "IpPermissions": [
                {
                    "FromPort": 22,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 22,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "416817624313",
            "Tags": [
                {
                    "Key": "aws:cloudformation:logical-id",
                    "Value": "BastionSecurityGroup"
                },
                {
                    "Key": "aws:cloudformation:stack-name",
                    "Value": "Linux-bastion-noin-staging"
                },
                {
                    "Key": "aws:cloudformation:stack-id",
                    "Value": "arn:aws:cloudformation:ap-northeast-1:416817624313:stack/Linux-bastion-noin-staging/ba1941c0-b34a-11e9-9c53-0aea6a80eeec"
                }
            ],
            "VpcId": "vpc-4ec1e72a"
        },
        {
            "Description": "2019-06-17T09:23:06.033Z",
            "GroupId": "sg-0fbc0faf83c25788e",
            "GroupName": "web-2197",
            "IpPermissions": [
                {
                    "FromPort": 80,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 80,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 0,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 65535,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "416817624313",
            "VpcId": "vpc-4ec1e72a"
        },
        {
            "Description": "noin production application server",
            "GroupId": "sg-33b89055",
            "GroupName": "ec2-noin-production-app",
            "IpPermissions": [
                {
                    "FromPort": 80,
                    "IpProtocol": "tcp",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 80,
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-66684300",
                            "UserId": "416817624313"
                        }
                    ]
                },
                {
                    "FromPort": 22,
                    "IpProtocol": "tcp",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 22,
                    "UserIdGroupPairs": [
                        {
                            "Description": "from deploy-production",
                            "GroupId": "sg-05197623a0901c21f",
                            "UserId": "416817624313"
                        },
                        {
                            "Description": "from linux-bastion1",
                            "GroupId": "sg-093d5f6db5f7c3fbf",
                            "UserId": "416817624313"
                        }
                    ]
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "416817624313",
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "ec2-noin-production"
                }
            ],
            "VpcId": "vpc-b0eae7d4"
        },
        {
            "Description": "default VPC security group",
            "GroupId": "sg-51d6b537",
            "GroupName": "default",
            "IpPermissions": [
                {
                    "FromPort": 11211,
                    "IpProtocol": "tcp",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 11211,
                    "UserIdGroupPairs": [
                        {
                            "Description": "from noin-staging",
                            "GroupId": "sg-b9b7f2df",
                            "UserId": "416817624313"
                        }
                    ]
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "416817624313",
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "memcached-noin-staging"
                }
            ],
            "VpcId": "vpc-4ec1e72a"
        },
        {
            "Description": "noin production elasticsearch server security",
            "GroupId": "sg-5a33003c",
            "GroupName": "elasticsearch-noin-production",
            "IpPermissions": [
                {
                    "FromPort": 22,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0",
                            "Description": ""
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 22,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 9300,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "172.32.0.0/16",
                            "Description": "for transport"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 9300,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 9200,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "172.32.0.0/16"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 9200,
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-0f1a7376",
                            "UserId": "416817624313"
                        },
                        {
                            "Description": "",
                            "GroupId": "sg-33b89055",
                            "UserId": "416817624313"
                        }
                    ]
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "416817624313",
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "elasticsearch-noin-production"
                }
            ],
            "VpcId": "vpc-b0eae7d4"
        },
        {
            "Description": "noin production alb security",
            "GroupId": "sg-66684300",
            "GroupName": "alb-noin-production",
            "IpPermissions": [
                {
                    "FromPort": 80,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 80,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 443,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 443,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "416817624313",
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "alb-noin-production"
                }
            ],
            "VpcId": "vpc-b0eae7d4"
        },
        {
            "Description": "redshift",
            "GroupId": "sg-789a2101",
            "GroupName": "redshift",
            "IpPermissions": [
                {
                    "FromPort": 5439,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "13.114.222.181/32"
                        },
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 5439,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "416817624313",
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "redshift"
                }
            ],
            "VpcId": "vpc-4ec1e72a"
        },
        {
            "Description": "noin production rds security",
            "GroupId": "sg-7c89a11a",
            "GroupName": "rds-noin-production",
            "IpPermissions": [
                {
                    "FromPort": 3306,
                    "IpProtocol": "tcp",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 3306,
                    "UserIdGroupPairs": [
                        {
                            "Description": "noin dmp batch",
                            "GroupId": "sg-03d4d777fab52525f",
                            "UserId": "416817624313"
                        },
                        {
                            "GroupId": "sg-093d5f6db5f7c3fbf",
                            "UserId": "416817624313"
                        },
                        {
                            "GroupId": "sg-0f1a7376",
                            "UserId": "416817624313"
                        },
                        {
                            "Description": "noin production app",
                            "GroupId": "sg-33b89055",
                            "UserId": "416817624313"
                        }
                    ]
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "416817624313",
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "rds-noin-production"
                }
            ],
            "VpcId": "vpc-b0eae7d4"
        },
        {
            "Description": "load-balancer-wizard-1 created on 2017-09-18T16:57:53.731+09:00",
            "GroupId": "sg-946b3af2",
            "GroupName": "st-analytics",
            "IpPermissions": [
                {
                    "FromPort": 80,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 80,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 443,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 443,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "416817624313",
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "st-analytics-elb"
                }
            ],
            "VpcId": "vpc-4ec1e72a"
        },
        {
            "Description": "noin production mongodb server security",
            "GroupId": "sg-980488e1",
            "GroupName": "mongodb-noin-production",
            "IpPermissions": [
                {
                    "FromPort": 22,
                    "IpProtocol": "tcp",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 22,
                    "UserIdGroupPairs": [
                        {
                            "Description": "from noin-deploy-production",
                            "GroupId": "sg-05197623a0901c21f",
                            "UserId": "416817624313"
                        },
                        {
                            "Description": "from linux-bastion",
                            "GroupId": "sg-093d5f6db5f7c3fbf",
                            "UserId": "416817624313"
                        }
                    ]
                },
                {
                    "FromPort": 27017,
                    "IpProtocol": "tcp",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 27017,
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-0f1a7376",
                            "UserId": "416817624313"
                        },
                        {
                            "GroupId": "sg-33b89055",
                            "UserId": "416817624313"
                        }
                    ]
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "416817624313",
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "mongodb-noin-production"
                }
            ],
            "VpcId": "vpc-b0eae7d4"
        },
        {
            "Description": "noin production redis security",
            "GroupId": "sg-a0076ed9",
            "GroupName": "redis-noin-production",
            "IpPermissions": [
                {
                    "FromPort": 6379,
                    "IpProtocol": "tcp",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 6379,
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-0f1a7376",
                            "UserId": "416817624313"
                        },
                        {
                            "GroupId": "sg-33b89055",
                            "UserId": "416817624313"
                        }
                    ]
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "416817624313",
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "redis-noin-production"
                }
            ],
            "VpcId": "vpc-b0eae7d4"
        },
        {
            "Description": "admin",
            "GroupId": "sg-a1085ec7",
            "GroupName": "admin",
            "IpPermissions": [
                {
                    "FromPort": 22,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 22,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "416817624313",
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "admin-login"
                }
            ],
            "VpcId": "vpc-4ec1e72a"
        },
        {
            "Description": "noin production memcached security",
            "GroupId": "sg-a480a8c2",
            "GroupName": "memcached-noin-production",
            "IpPermissions": [
                {
                    "FromPort": 11211,
                    "IpProtocol": "tcp",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 11211,
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-0f1a7376",
                            "UserId": "416817624313"
                        },
                        {
                            "GroupId": "sg-33b89055",
                            "UserId": "416817624313"
                        }
                    ]
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "416817624313",
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "memcached-noin-production"
                }
            ],
            "VpcId": "vpc-b0eae7d4"
        },
        {
            "Description": "nontv staging security",
            "GroupId": "sg-b9b7f2df",
            "GroupName": "nontv-staging",
            "IpPermissions": [
                {
                    "FromPort": 80,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0",
                            "Description": ""
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 80,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 22,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "3.113.118.126/32",
                            "Description": "from noin-deploy-production"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 22,
                    "UserIdGroupPairs": [
                        {
                            "Description": "from linux-bastion-staging",
                            "GroupId": "sg-0623b52b0a95cb4db",
                            "UserId": "416817624313"
                        }
                    ]
                },
                {
                    "FromPort": 443,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [
                        {
                            "CidrIpv6": "::/0"
                        }
                    ],
                    "PrefixListIds": [],
                    "ToPort": 443,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "416817624313",
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "ec2-nontv-staging"
                }
            ],
            "VpcId": "vpc-4ec1e72a"
        },
        {
            "Description": "nontv staging rds security",
            "GroupId": "sg-d94e09bf",
            "GroupName": "rds-nontv-staging",
            "IpPermissions": [
                {
                    "FromPort": 3306,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "118.158.213.95/32"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 3306,
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-0623b52b0a95cb4db",
                            "UserId": "416817624313"
                        },
                        {
                            "GroupId": "sg-08c08cbc2e8e697d7",
                            "UserId": "416817624313"
                        },
                        {
                            "GroupId": "sg-b9b7f2df",
                            "UserId": "416817624313"
                        }
                    ]
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "416817624313",
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "rds-nontv-staging"
                }
            ],
            "VpcId": "vpc-4ec1e72a"
        },
        {
            "Description": "default VPC security group",
            "GroupId": "sg-e96c448f",
            "GroupName": "default",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-e96c448f",
                            "UserId": "416817624313"
                        }
                    ]
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "416817624313",
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "noin-default"
                }
            ],
            "VpcId": "vpc-b0eae7d4"
        },
        {
            "Description": "Master group for Elastic MapReduce created on 2018-01-13T14:44:49.791Z",
            "GroupId": "sg-f361e08a",
            "GroupName": "ElasticMapReduce-master",
            "IpPermissions": [
                {
                    "FromPort": 0,
                    "IpProtocol": "tcp",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 65535,
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-f361e08a",
                            "UserId": "416817624313"
                        },
                        {
                            "GroupId": "sg-f95edf80",
                            "UserId": "416817624313"
                        }
                    ]
                },
                {
                    "FromPort": 22,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 22,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 8443,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "27.0.3.152/29"
                        },
                        {
                            "CidrIp": "103.246.151.128/26"
                        },
                        {
                            "CidrIp": "27.0.3.144/29"
                        },
                        {
                            "CidrIp": "27.0.1.152/29"
                        },
                        {
                            "CidrIp": "27.0.1.24/29"
                        },
                        {
                            "CidrIp": "54.240.200.0/24"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 8443,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 0,
                    "IpProtocol": "udp",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 65535,
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-f361e08a",
                            "UserId": "416817624313"
                        },
                        {
                            "GroupId": "sg-f95edf80",
                            "UserId": "416817624313"
                        }
                    ]
                },
                {
                    "FromPort": -1,
                    "IpProtocol": "icmp",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": -1,
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-f361e08a",
                            "UserId": "416817624313"
                        },
                        {
                            "GroupId": "sg-f95edf80",
                            "UserId": "416817624313"
                        }
                    ]
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "416817624313",
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "ElasticMapReduce-master"
                }
            ],
            "VpcId": "vpc-b0eae7d4"
        },
        {
            "Description": "Slave group for Elastic MapReduce created on 2018-01-13T14:43:49.831Z",
            "GroupId": "sg-f95edf80",
            "GroupName": "ElasticMapReduce-slave",
            "IpPermissions": [
                {
                    "FromPort": 0,
                    "IpProtocol": "tcp",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 65535,
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-f361e08a",
                            "UserId": "416817624313"
                        },
                        {
                            "GroupId": "sg-f95edf80",
                            "UserId": "416817624313"
                        }
                    ]
                },
                {
                    "FromPort": 0,
                    "IpProtocol": "udp",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 65535,
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-f361e08a",
                            "UserId": "416817624313"
                        },
                        {
                            "GroupId": "sg-f95edf80",
                            "UserId": "416817624313"
                        }
                    ]
                },
                {
                    "FromPort": -1,
                    "IpProtocol": "icmp",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": -1,
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-f361e08a",
                            "UserId": "416817624313"
                        },
                        {
                            "GroupId": "sg-f95edf80",
                            "UserId": "416817624313"
                        }
                    ]
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "416817624313",
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "ElasticMapReduce-master"
                }
            ],
            "VpcId": "vpc-b0eae7d4"
        }
    ]
}
